# golang-profiling

./: .gitignore  CHANGELOG_EN.md  CHANGELOG_ZH.md  CONTRIBUTING.md  CONTRIBUTING_zh.md  Cargo.toml  Dockerfile  README.md  README_zh.md  build-docker.sh  deny.toml  flamegraph.pl  符号解析修复说明.md
.cargo/: config.toml
.github/: README.md
.github/workflows/: ci.yml  docs.yml  release.yml  security.yml
example/: README.md  main.go
example/basic/: main.go
example/mixed/: test_mixed.go
example/offcpu/: test_offcpu.go
example/oncpu/: test_oncpu.go
golang-profile/: Cargo.toml  build.rs
golang-profile-common/: Cargo.toml
golang-profile-ebpf/: Cargo.toml
golang-profile-ebpf/src/: main.rs  vmlinux.rs
golang-profile/src/: golang_parser.rs  main.rs  symbol_resolver.rs
golang-profiling/: .dockerignore  Cargo.toml  build.rs
golang-profiling-common/: Cargo.toml
golang-profiling-common/src/: lib.rs
golang-profiling-ebpf/: Cargo.toml
golang-profiling-ebpf/.cargo/: config.toml
golang-profiling-ebpf/src/: main.rs
golang-profiling/src/: dwarf_parser.rs  elfgopclntab.rs  flamegraph_export.rs  golang_parser.rs  main.rs  mod.rs  symbol_resolver.rs
kubectl-pprof/: DESIGN.md  Makefile  README.md  go.mod  go.sum
kubectl-pprof/cmd/: golang.go  main.go
kubectl-pprof/docs/: flamegraph-transfer.md
kubectl-pprof/internal/errors/: errors.go
kubectl-pprof/internal/types/: language.go  types.go
kubectl-pprof/internal/utils/: utils.go
kubectl-pprof/internal/validator/: validator.go
kubectl-pprof/pkg/config/: config.go  language.go
kubectl-pprof/pkg/discovery/: discovery.go
kubectl-pprof/pkg/job/: cleanup.go  manager.go
kubectl-pprof/pkg/profiler/: profiler.go
