[package]
name = "golang-profiling-ebpf"
version = "0.1.0"
edition.workspace = true

[profile.dev]
opt-level = 2
panic = "abort"

[profile.release]
opt-level = 3
lto = true
panic = "abort"

[dependencies]
aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
golang-profiling-common = { path = "../golang-profiling-common" }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "golang-profiling"
path = "src/main.rs"
