[package]
name = "golang-profiling"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[dependencies]
golang-profiling-common = { path = "../golang-profiling-common", features = ["user"] }

anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "fs",
    "io-util",
    "time",
] }
clap = { workspace = true, features = ["derive"] }
object = "0.36"
memmap2 = "0.9"
byteorder = "1.5"
procfs = "0.16"
gimli = "0.29"

[dev-dependencies]
tempfile = "3.8"
[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
# TODO(https://github.com/rust-lang/cargo/issues/12375): this should be an artifact dependency, but
# it's not possible to tell cargo to use `-Z build-std` to build it. We cargo-in-cargo in the build
# script to build this, but we want to teach cargo about the dependecy so that cache invalidation
# works properly.
#
# Note also that https://github.com/rust-lang/cargo/issues/10593 occurs when `target = ...` is added
# to an artifact dependency; it seems possible to work around that by setting `resolver = "1"` in
# Cargo.toml in the workspace root.
#
# Finally note that *any* usage of `artifact = ...` in *any* Cargo.toml in the workspace breaks
# workflows with stable cargo; stable cargo outright refuses to load manifests that use unstable
# features.
golang-profiling-ebpf = { path = "../golang-profiling-ebpf" }

[[bin]]
name = "golang-profiling"
path = "src/main.rs"
